--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -12,7 +12,7 @@ http://ionicframework.com/docs/theming/ */
   --ion-color-medium-tint: #FFFFFF;
   --ion-color-medium-shade: #FFFFFF;
   --ion-color-medium-contrast:#FFFFFF;
-  --ion-background-color: #000000;
+  --ion-background-color: #F6CF27;
   color: #FFFFFF;
 }
 
