--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -23,7 +23,6 @@ h1 , h2 , h3 , h4 , p , a , ul li , strong , label {
 }
 
 ion-modal { 
-  --height: 386px;
-  margin-top: 430px;
+  margin-top: 50%;
   border-radius: 50px 50px 0 0;
 }
